N. Jones - DX 602 Week 3 - corrections to 13 and 15

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -950,7 +950,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 44,
       "metadata": {
         "id": "yc26DedyE2JT"
       },
@@ -960,7 +960,7 @@
         "\n",
         "def p13(dictionaries, key):\n",
         "    for d in dictionaries:\n",
-        "        if d.gey(key) in (None, ''):\n",
+        "        if d.get(key) in (\"\", None):\n",
         "            return d\n",
         "    return None    "
       ]
@@ -1041,7 +1041,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p15 = 8"
+        "p15 = 10"
       ]
     },
     {
